# autosaxs-diag

./: .gitignore  LICENSE  README.md  hyperparameter_tuning_description.md  manuscript.md  pyproject.toml  requirements.txt
data/: ML_targets_crystal_oligo v2.csv  ML_targets_crystal_oligo v2.xlsx  ML_targets_crystal_oligo v3.csv  ML_targets_crystal_oligo v3.xlsx  cleaned_data.csv  cleaned_data_ci.csv  cleaned_data_rg.csv
raw_saxs_data/: Step1_pseudo_rg_v4_group3_offset_SIFig_PATCHED.py  Step3_FFmaker_Oligo_v9.py
scripts/: generate_analysis_charts.py  generate_heatmap.py  generate_heatmap_ci.py  generate_publication_plots.py  run_advanced_analysis.py  run_analysis.py  run_analysis_optimized.py  run_analysis_rigorous.py  run_augmentation_test.py  run_evaluation.py  run_extended_analysis.py  run_feature_engineering.py  run_final_analysis.py
selected for ML/: Step2_crystalFeatures_v4_CI_gated_ds_mosaic_v4_compact.py  Step4 for fitting plot_v3.py
skill/: SKILL.md
skill/pipeline/: step1_5_phase_diagram.py
skill/saxs_physics/: SKILL.md
skill/saxs_physics/scripts/: analyze_batch.py  atsas_wrapper.py  saxs_math.py  utils.py
src/: __init__.py  data_cleaning.py  modeling.py  visualization.py
